gap solved

--- a/style.css
+++ b/style.css
@@ -1260,7 +1260,7 @@ body{
         left:-1.375rem;
     }
     .cache-component{
-        line-height: 70px;
+        line-height: 76px;
     }
     .nmhp-top{
         margin-bottom: 4rem;
@@ -1365,7 +1365,7 @@ body{
     }
     .cache-component{
         font-size: 6.25rem;
-        line-height: 85px;
+        line-height: 96px;
     
     }
     .box-text{
@@ -1463,7 +1463,7 @@ body{
     }
     .cache-component{
         font-size: 7.5rem;
-        line-height: 95px;
+        line-height: 115px;
     
     }
     .box-item {
